--- a/tienda/pom.xml
+++ b/tienda/pom.xml
@@ -63,6 +63,13 @@
 		    <artifactId>commons-csv</artifactId>
 		    <version>1.8</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.3</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
